feat: TOPページを追加する

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,13 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
+import DeathStGood from "../components/DeathStGood.astro";
+import GitHub from "../components/GitHub.astro";
 
+const pageTitle = "www.koba-masa.com"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout>
+  <h1>{pageTitle}</h1>
+  <DeathStGood />
+  <GitHub />
+</BaseLayout>
