feat: バッジの取得のために外部サイトにアクセスしているため、テストページから削除する

--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -1,9 +1,19 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
-
 const pageTitle = "Test Page"
 ---
 
-<BaseLayout>
-  <h1>This is {pageTitle}.</h1>
-</BaseLayout>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+
+    <title>
+      {(pageTitle ? `${pageTitle} | ` : '') + 'koba-masa'}
+    </title>
+  </head>
+  <body>
+    <h1>This is {pageTitle}.</h1>
+  </body>
+</html>
