feat: パスエイリアスを追加する

--- a/src/components/DeathStGood.astro
+++ b/src/components/DeathStGood.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import goodImage from '../assets/images/good_128.png'
+import goodImage from '@/assets/images/good_128.png'
 
 const counter = 0;
 ---
