--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import DeathStGood from "../components/DeathStGood.astro";
-import GitHub from "../components/GitHub.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import DeathStGood from "@/components/DeathStGood.astro";
+import GitHub from "@/components/GitHub.astro";
 
 const pageTitle = "www.koba-masa.com"
 ---
