--- a/src/pages/introduction.astro
+++ b/src/pages/introduction.astro
@@ -11,7 +11,7 @@ const data = {
     "TypeScript": 1,
     "HTML": 2,
     "CSS": 1,
-    // "CSS1": 70,
+    "CSS1": 5,
     // "CSS2": 70,
     // "CSS3": 70,
   }
@@ -20,5 +20,5 @@ const data = {
 
 <BaseLayout>
   <h1>{pageTitle}</h1>
-  <RadarChart length=400 background_color="#ddd" data={data} />
+  <RadarChart length=400 background_color="#fff" data={data} />
 </BaseLayout>
