--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,8 @@
 ---
 import Footer from '@/components/Footer.astro';
 
-const { pageTitle } = Astro.props;
+const { pageTitle = "" } = Astro.props;
+const { isNoIndex = false} = Astro.props;
 ---
 
 <html lang="ja">
@@ -10,6 +11,7 @@ const { pageTitle } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    {isNoIndex && <meta name="robots" content="noindex" />}
 
     <title>
       {(pageTitle ? `${pageTitle} | ` : '') + 'koba-masa'}
