feat: max-widthを設定する

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,4 +19,10 @@ const { pageTitle } = Astro.props;
     <slot />
     <Footer />
   </body>
+  <style>
+    body {
+      margin: auto;
+      max-width: 80%;
+    }
+  </style>
 </html>
